--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "uuid": "^11.0.3",
+    "ws": "^8.18.0"
   },
   "name": "api",
   "version": "1.0.0",
