--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.18.0",
     "react-transition-group": "^4.4.5",
+    "react-use-websocket": "^4.11.1",
     "sass": "^1.63.6",
     "web-vitals": "^3.4.0"
   },
